[BUGFIX] Enable wordwrap for anchors (long links)

--- a/typo3conf/ext/theme/Resources/Private/Scss/_typography.scss
+++ b/typo3conf/ext/theme/Resources/Private/Scss/_typography.scss
@@ -1,1 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Share:400,700,400italic);
+@import url('https://fonts.googleapis.com/css?family=Share:400,700,400italic');
+
+a {
+	word-wrap: break-word;
+}
